--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,4 +1,4 @@
 driverClass=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/crm
+url=jdbc:mysql://localhost:3306/graduation_crm
 userName=root
 passWord=123456
